feat: Added a new service, controller and route for confirming emails used in sign-ups. Also updated the Swagger documentation. Also switched database from Render to Supabase.
