# docs/swagger.json
@@ -9,7 +9,7 @@
     "host": "robo-advisor-backend-service.onrender.com",
     "basePath": "/",
     "paths": {
-        "/ai/fetch-response/by-days": {
+        "/ai/fetch-response/days": {
             "get": {
                 "security": [
                     {
@@ -66,6 +66,12 @@
                         "schema": {
                             "$ref": "#/definitions/models.AuthErrorResponse"
                         }
+                    },
+                    "500": {
+                        "description": "Internal Server Error",
+                        "schema": {
+                            "$ref": "#/definitions/models.ServerErrorResponse"
+                        }
                     }
                 }
             }
@@ -120,6 +126,12 @@
                         "schema": {
                             "$ref": "#/definitions/models.AuthErrorResponse"
                         }
+                    },
+                    "500": {
+                        "description": "Internal Server Error",
+                        "schema": {
+                            "$ref": "#/definitions/models.ServerErrorResponse"
+                        }
                     }
                 }
             }
@@ -171,6 +183,12 @@
                         "schema": {
                             "$ref": "#/definitions/models.AuthErrorResponse"
                         }
+                    },
+                    "500": {
+                        "description": "Internal Server Error",
+                        "schema": {
+                            "$ref": "#/definitions/models.ServerErrorResponse"
+                        }
                     }
                 }
             }
@@ -211,17 +229,18 @@
                         "schema": {
                             "$ref": "#/definitions/models.ErrorResponse"
                         }
+                    },
+                    "500": {
+                        "description": "Internal Server Error",
+                        "schema": {
+                            "$ref": "#/definitions/models.ServerErrorResponse"
+                        }
                     }
                 }
             }
         },
         "/auth/login": {
             "post": {
-                "security": [
-                    {
-                        "BearerAuth": []
-                    }
-                ],
                 "description": "Authenticate user and return JWT token",
                 "consumes": [
                     "application/json"
@@ -261,6 +280,12 @@
                         "description": "Unauthorized",
                         "schema": {
                             "$ref": "#/definitions/models.AuthErrorResponse"
+                        }
+                    },
+                    "500": {
+                        "description": "Internal Server Error",
+                        "schema": {
+                            "$ref": "#/definitions/models.ServerErrorResponse"
                         }
                     }
                 }
@@ -310,6 +335,12 @@
                         "schema": {
                             "$ref": "#/definitions/models.AuthErrorResponse"
                         }
+                    },
+                    "500": {
+                        "description": "Internal Server Error",
+                        "schema": {
+                            "$ref": "#/definitions/models.ServerErrorResponse"
+                        }
                     }
                 }
             }
@@ -350,6 +381,12 @@
                         "schema": {
                             "$ref": "#/definitions/models.ErrorResponse"
                         }
+                    },
+                    "500": {
+                        "description": "Internal Server Error",
+                        "schema": {
+                            "$ref": "#/definitions/models.ServerErrorResponse"
+                        }
                     }
                 }
             }
@@ -389,6 +426,58 @@
                         "description": "Bad Request",
                         "schema": {
                             "$ref": "#/definitions/models.ErrorResponse"
+                        }
+                    },
+                    "500": {
+                        "description": "Internal Server Error",
+                        "schema": {
+                            "$ref": "#/definitions/models.ServerErrorResponse"
+                        }
+                    }
+                }
+            }
+        },
+        "/auth/signup/confirm": {
+            "post": {
+                "description": "Confirm email used for signup",
+                "consumes": [
+                    "application/json"
+                ],
+                "produces": [
+                    "application/json"
+                ],
+                "tags": [
+                    "Auth"
+                ],
+                "summary": "Confirm mail by link sent",
+                "parameters": [
+                    {
+                        "description": "Token and email for confirmation",
+                        "name": "body",
+                        "in": "body",
+                        "required": true,
+                        "schema": {
+                            "$ref": "#/definitions/models.ConfirmSignupRequest"
+                        }
+                    }
+                ],
+                "responses": {
+                    "200": {
+                        "description": "OK",
+                        "schema": {
+                            "$ref": "#/definitions/models.ConfirmSignupResponse"
+                        }
+                    },
+                    "400": {
+                        "description": "Bad Request",
+                        "schema": {
+                            "$ref": "#/definitions/models.ErrorResponse"
+                        }
+                    },
+                    "500": {
+                        "description": "Internal Server Error",
+                        "schema": {
+                            "$ref": "#/definitions/models.ServerErrorResponse"
                         }
                     }
                 }
@@ -447,6 +536,34 @@
                 "status": {
                     "type": "string",
                     "example": "error"
+                }
+            }
+        },
+        "models.ConfirmSignupRequest": {
+            "type": "object",
+            "required": [
+                "email",
+                "token"
+            ],
+            "properties": {
+                "email": {
+                    "type": "string"
+                },
+                "token": {
+                    "type": "string"
+                }
+            }
+        },
+        "models.ConfirmSignupResponse": {
+            "type": "object",
+            "properties": {
+                "message": {
+                    "type": "string",
+                    "example": "User status updated successfully"
+                },
+                "status": {
+                    "type": "string",
+                    "example": "success"
                 }
             }
         },
@@ -574,6 +691,19 @@
                 "status": {
                     "type": "string",
                     "example": "success"
+                }
+            }
+        },
+        "models.ServerErrorResponse": {
+            "type": "object",
+            "properties": {
+                "error": {
+                    "type": "string",
+                    "example": "Internal Server Error"
+                },
+                "status": {
+                    "type": "string",
+                    "example": "error"
                 }
             }
         },
